# College-Rankings-Website

./: .gitignore  BACKGROUND_IMPLEMENTATION.md  README.md  SETUP.md  netlify.toml  package-lock.json  render.yaml
Frontend/: .env.example  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/: CollegeCard.tsx  CompositeRankingView.tsx  ErrorBoundary.tsx  Header.tsx  IndexRankingView.tsx  ParticleBackground.tsx  RankingsTable.tsx  SearchBar.tsx  StrengthsWeaknesses.tsx  index.ts  particlePresets.ts
Frontend/src/pages/: CollegeDetail.tsx  Home.tsx  Search.tsx  index.ts
Frontend/src/services/: api.ts
Frontend/src/types/: index.ts
backend/: .env.example  build.sh  pyproject.toml  requirements.txt
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/rankings/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  views.py
backend/rankings/management/commands/: fetch_rankings.py  seed_demo_data.py  update_cache.py
backend/rankings/migrations/: 0001_initial.py
backend/scrapers/: __init__.py  arwu_scraper.py  base_scraper.py  forbes_scraper.py  niche_scraper.py  qs_scraper.py  usnews_scraper.py
